// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository detectPackageFiles(config) adds package files to object 1`] = `
Array [
  "package.json",
  "backend/package.json",
]
`;

exports[`workers/repository groupUpgradesByBranch(upgrades, logger) does not group if different compiled branch names 1`] = `
Object {
  "bar-1.1.0": Array [
    Object {
      "branchName": "bar-{{version}}",
      "version": "1.1.0",
    },
  ],
  "foo-1.1.0": Array [
    Object {
      "branchName": "foo-{{version}}",
      "version": "1.1.0",
    },
  ],
  "foo-2.0.0": Array [
    Object {
      "branchName": "foo-{{version}}",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`workers/repository groupUpgradesByBranch(upgrades, logger) returns one branch if one input 1`] = `
Object {
  "foo-1.1.0": Array [
    Object {
      "branchName": "foo-{{version}}",
      "version": "1.1.0",
    },
  ],
}
`;

exports[`workers/repository initApis(config) throws if unknown platform 1`] = `"Unknown platform: foo"`;
